# 017_LLM-02_opneai-rrg-sample

./: .gitignore  README.md  app-local.py  app.py  main.py  pyproject.toml
data/: knowledge.txt
