[project]
name = "017-llm-02-opneai-rrg-sample"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faiss-cpu>=1.13.1",
    "numpy>=2.3.5",
    "openai>=2.9.0",
    "python-dotenv>=1.2.1",
    "sentence-transformers>=3.3.1",
    "streamlit>=1.52.1",
]
